Bug 497185 - When printing, selecting a specific page range in the Print dialog results in all pages being printed
Summary: When printing, selecting a specific page range in the Print dialog results in...
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.3
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-08 02:39 UTC by Grósz Dániel
Modified: 2025-01-19 13:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2024-12-08 02:39:47 UTC
SUMMARY
If I print after scanning multiple pages, it prints all pages even if I select printing only one page.

STEPS TO REPRODUCE
1. Scan two pages.
2. Click Print.
3. Set Page range to 1 to 1.

OBSERVED RESULT
Prints both pages.

EXPECTED RESULT
Prints only the 1st page.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20241206
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.1
Kernel Version: 6.11.8-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
The printer/scanner is HP DeskJet 2700e via IPP Everywhere and eSCL.

I set severity to major because it may waste however many pages, or ruin pages that already have something on one side, and you intended to print something else on their other side.
Comment 1 John Kizer 2024-12-17 06:31:22 UTC
I can reproduce this on Skanpage 24.12.0, Fedora KDE 41.

https://bugs.kde.org/show_bug.cgi?id=436388 feels similar, but I can't reproduce the same issue in Okular 24.12.0, and that one concerns printing to PDF.
Comment 2 Grósz Dániel 2024-12-17 07:23:08 UTC
(In reply to John Kizer from comment #1)
> https://bugs.kde.org/show_bug.cgi?id=436388 feels similar, but I can't
> reproduce the same issue in Okular 24.12.0, and that one concerns printing
> to PDF.

Also, AFAIUI, that one is a result of a general Qt limitation w.r.t. printing to PDF, and it concerns complex page ranges, not simple from-to ones.
Comment 3 Bug Janitor Service 2025-01-12 11:55:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/skanpage/-/merge_requests/90
Comment 4 Alexander Stippich 2025-01-19 13:15:50 UTC
Git commit e7b753b49778f45c209050b68ca96692a1f6da1b by Alexander Stippich.
Committed on 19/01/2025 at 13:02.
Pushed by astippich into branch 'master'.

improve printing support
- implement page ranges
- implement current page printing
- support reverse printing

Page ranges are currently based on QPrintDialog's implementation for server-side page ranges with CUPS

M  +45   -7    src/DocumentPrinter.cpp
M  +4    -4    src/DocumentPrinter.h
M  +1    -1    src/Skanpage.cpp

https://invent.kde.org/utilities/skanpage/-/commit/e7b753b49778f45c209050b68ca96692a1f6da1b