improve printing support - implement page ranges - implement current page printing - support reverse printing

Page ranges are currently based on QPrintDialog's implementation for server-side page ranges with CUPS

BUG: 497185